# StreamDeck-AudioSwitcher

./: .clang-format  .editorconfig  .gitignore  AudioDeviceLib.cmake  CMakeLists.txt  README.md  StreamDeckSDK.cmake  TROUBLESHOOTING.md  sign_target.cmake
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  package.yml  release.yml  sdplugin.yml
Sources/: AudioDevices-inline.h  AudioDevices.h  AudioDevicesMacOS.cpp  AudioDevicesWindows.cpp  AudioFunctions.cpp  AudioFunctions.h  AudioMuteStreamDeckPlugin.cpp  AudioMuteStreamDeckPlugin.h  AudioSwitcherStreamDeckPlugin.cpp  AudioSwitcherStreamDeckPlugin.h  ButtonSettings.cpp  ButtonSettings.h  CMakeLists.txt  MyStreamDeckPlugin.cpp  MyStreamDeckPlugin.h  StringEncoding.cpp  StringEncoding.h  audio_json.cpp  audio_json.h  main.cpp  pch.h  version.rc.in
Sources/Common/: ESDBasePlugin.h  ESDConnectionManager.cpp  ESDSDKDefines.h
Sources/Windows/: AudioFunctions.cpp  PolicyConfig.h  com.elgato.cpu.sdPlugin.vcxproj  com.fredemmott.audiooutputswitcher.sdplugin.sln
Sources/sdPlugin/: manifest.json
Sources/sdPlugin/propertyinspector/: index.html  index_pi.js
StreamDeckSDK/: CMakeLists.txt  ESDBasePlugin.h  ESDCommon.h  ESDCommonMac.h  ESDCommonWindows.cpp  ESDCommonWindows.h  ESDConnectionManager.cpp  ESDConnectionManager.h  ESDLocalizer.h  ESDLogger.cpp  ESDLogger.h  ESDMain.cpp  ESDSDKDefines.h  ESDUtilities.h  ESDUtilitiesWindows.cpp
sdPlugin/: manifest.json  manifest.json.cmake
sdPlugin/propertyinspector/: index.html
